<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UploadActivity">
  
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgUpdate"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <Button
        android:id="@+id/btnGaleri"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:icon="@drawable/ic_photo_library_24"
        app:layout_constraintEnd_toStartOf="@id/btnCamera"
        app:layout_constraintStart_toStartOf="@+id/imgUpdate"
        app:layout_constraintTop_toBottomOf="@+id/imgUpdate" />

    <Button
        android:id="@+id/btnCamera"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="@+id/btnGaleri"
        app:layout_constraintEnd_toEndOf="@+id/imgUpdate"
        app:layout_constraintStart_toEndOf="@+id/btnGaleri"
        app:layout_constraintTop_toTopOf="@+id/btnGaleri" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGaleri">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/descEditInput"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="top|start" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpload"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/descInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descInputLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>