<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgStory"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_background"
            app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
            app:layout_constraintEnd_toEndOf="@+id/dateTextView"
            app:layout_constraintStart_toStartOf="@+id/dateTextView"
            app:layout_constraintTop_toTopOf="@+id/dateTextView" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgStory"
            app:layout_constraintEnd_toEndOf="@+id/imgStory"
            tools:text="@string/date_format" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/imgStory"
            app:layout_constraintEnd_toEndOf="@+id/imgStory"
            app:layout_constraintStart_toStartOf="@+id/imgStory" />

        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:maxLines="3"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewName"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>